# WindDensity-MBIR

./: .gitignore  LICENSE  README.rst  pyproject.toml  requirements.txt
aomodel/: __init__.py  _utils.py  long_range_var.py  pca.py  revar.py
demo/: demo_ReVAR.py  demo_processing_experimental_data.py  demo_simulation_and_tomography.py  demo_utils.py  get_demo_data_server.sh  requirements.txt  run_demos.sh  test_pr1.sh  test_pr3.sh
dev_scripts/: build_docs.sh  clean_install_all.sh
docs/: README.rst
docs/_templates/: package.rst
docs/source/: api.rst  conf.py  configuration_params.rst  index.rst  install.rst  long_range_var.rst  pca.rst  revar.rst  simulation.rst  tomography.rst  utilities.rst  visualization_and_analysis.rst
experiments/: add_gt_mean_sq_postprocess.py  recon_visualization_prep.py  run_all_data_collection.sh  run_all_visualizations.sh  runtime_warning.py
experiments/fig10_11/: fig10_11_data_collection.py  fig10_11_visualization.py
experiments/fig10_11_17/: fig10_11_17_data_collection.py  fig17_visualization.py
experiments/fig10_11_geometry_3v2_11v16/: data_collection.py  visualization.py  visualization_recon.py
experiments/fig10_11_table2_geometry_3v2_11v16/: data_collection.py
experiments/fig12/: fig12_visualization.py
experiments/fig13_14_15/: fig13_14_15_data_collection.py
experiments/fig13_14_15_17/: fig13_14_15_17_data_collection.py  fig13_14_15_visualization.py  fig13_visualization.py  fig14_15_visualization.py  fig17_visualization.py
experiments/fig14_15_geometry_7v8/: data_collection.py  visualization.py  visualization_recon.py
experiments/fig14_15_table2_geometry_7v8/: data_collection.py
experiments/fig16/: fig16_visualization.py
experiments/fig17/: fig17_visualization.py
experiments/fig6/: fig6_visualization.py  table2_data_collection.py
experiments/fig6_table2/: fig6_visualization.py  table2_data_collection.py  table2_visualization.py
experiments/fig7/: fig7_data_collection.py  fig7_visualization.py
experiments/fig7_geometry_sweep/: data_collection.py  visualization.py
experiments/fig7_table1/: fig7_data_collection.py  fig7_visualization.py  table1_visualization.py
experiments/fig8_9/: fig8_visualization.py  fig9_data_collection.py  fig9_visualization.py
experiments/fig8_regional_nrmse/: data_collection.py  visualization.py
experiments/table2_fbp_comparison/: data_collection.py  visualization.py
wind_density_tomo/: __init__.py  simulation.py  tomography.py  utilities.py  visualization_and_analysis.py
wind_tomo/: simulation.py  tomography.py  utilities.py
winddensity_mbir/: __init__.py  configuration_params.py  simulation.py  tomography.py  utilities.py  visualization_and_analysis.py
