[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aomodel"
version = "0.1"
description = "Synthetic time-series data generation"
readme = "README.rst"
license = { file = "LICENSE" }
authors = [
    { name = "aomodel development team", email = "buzzard@purdue.edu" }
]
requires-python = ">=3.11"
dependencies = ["numpy>=2.2.3",
                "matplotlib",
                "Pillow>=9.1",
                "scipy",
                "jaxopt",
                "jax",
                "scipy"]

[project.optional-dependencies]
cuda12 = ["jax[cuda12]"]
docs = [
     "sphinx",
     "sphinxcontrib-bibtex",
     "sphinx-rtd-theme",
     "ruamel.yaml",
     "psutil",
     "numpy"
]

[tool.setuptools.packages]
find = {}

[project.urls]
source = "https://github.com/cabouman/aomodel"