[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "winddensity_mbir"
version = "0.1"
description = "tomographic reconstruction of wind tunnel turbulance data"
keywords = ["tomography", "tomographic reconstruction", "computed tomography"]
readme = "README.rst"
license = { file = "LICENSE" }
authors = [
    { name = "WindDensity-MBIR development team", email = "buzzard@purdue.edu" }
]
requires-python = ">=3.11"
dependencies = ["numpy",
                "pandas",
                "seaborn",
                "matplotlib",
                "mbirjax",
                "scipy",
                "jaxlib",
                "jax",
                "setuptools",
                "zernike"]

[project.optional-dependencies]
cuda12 = ["jax[cuda12]"]
docs = [
     "sphinx",
     "sphinxcontrib-bibtex",
     "sphinx-rtd-theme",
     "ruamel.yaml",
     "psutil",
     "numpy"
]

[tool.setuptools.packages]
find = {}

[project.urls]
source = "https://github.com/cabouman/winddensity_mbir"