[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "winddensity_mbir"
version = "0.1"
description = "tomographic reconstruction of wind tunnel turbulance data"
keywords = ["tomography", "tomographic reconstruction", "computed tomography"]
readme = "README.rst"
license = { file = "LICENSE" }
authors = [
    { name = "WindDensity-MBIR development team", email = "buzzard@purdue.edu" }
]
requires-python = ">=3.11"
dependencies = ["numpy==2.4.4",
                "pandas==3.0.2",
                "seaborn==0.13.2",
                "matplotlib==3.10.8",
                "mbirjax==0.6.14",
                "scipy==1.17.1",
                "jaxlib==0.9.2",
                "jax==0.9.2",
                "setuptools==82.0.1"]

[project.optional-dependencies]
cuda12 = ["jax[cuda12]"]
docs = [
     "sphinx",
     "sphinxcontrib-bibtex",
     "sphinx-rtd-theme",
     "ruamel.yaml",
     "psutil",
     "numpy"
]

[tool.setuptools.packages]
find = {}

[project.urls]
source = "https://github.com/cabouman/winddensity_mbir"